# rust_bible

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  example_manifest.json  index.html  manifest.json  output.css  tailwind.config.js
assets/index/: .managed.json  meta.json
public/: tailwind.css
src/: bible_state_control.rs  input.css  lib.rs  main.rs  utils.rs  verse.rs
src/components/: chapter_nav.rs  chapter_text.rs  loading.rs  mod.rs  sidebar.rs  smart_jump.rs
src/helpers/: api.rs  dioxus_helpers.rs  keyword_search.rs  mod.rs  regex_search.rs  tantivy_search.rs
src/models/: bible.rs  mod.rs  translations.rs
