[package]
name = "rust_bible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
anyhow = "1.0.81"
itertools = "0.12.1"
log = "0.4.21"
manganis = "0.2.1"
reqwest = "0.12.1"
serde = "1.0.197"
serde_json = "1.0.114"
sublime_fuzzy = "0.7.0"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
dioxus = { version = "0.5" }
dioxus-web = "0.5.0"

[features]
default = []
# desktop = ["dioxus/desktop"]
# server = ["dioxus/axum"]
# web = ["dioxus/web"]
