[package]
name = "rust_bible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
anyhow = "1.0.81"
itertools = "0.12.1"
log = "0.4.21"
manganis = "0.2.1"
reqwest = "0.12.1"
serde = "1.0.197"
serde_json = "1.0.114"
sublime_fuzzy = "0.7.0"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
dioxus = { version = "0.5.1" }
getrandom = { version = "0.2", features = ["js"] }
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "4e79e11007b6c9fc3d3965beefe33e1ffcf641d3" }
tempfile = "3.10.1"

[features]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.5.1"
